--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -22,5 +22,6 @@
                         {% if site.codepen %}<a class="social-btn" href="http://codepen.io/{{ site.codepen }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-codepen"></i></a>{% endif %}
                         {% if site.keybase %}<a class="social-btn" href="https://keybase.io/{{ site.keybase }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-key"></i></a>{% endif %}
                         {% if site.xmpp %}<a class="social-btn" href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i></a>{% endif %}
+                        <a class="social-btn" href="/home/vivek/Latex/Deedey/cv_12.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-text-o"></i></a>{% endif %}
                         {% if site.hackernews %}<a class="social-btn" href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i></a>{% endif %}
                   </h3>
