--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: compress
     {% include head.html %}
 </head>
 <body>
-    {% include nav.html %}
+    <!-- {% include nav.html %} -->
     <!-- Header -->
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
@@ -31,17 +31,17 @@ layout: compress
                     </h3>
                     {% include social-links.html %}
                   <hr class="hr-line">
-                  <h3 class="title">
+               <!--    <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                       <!--   <a class="btn zoombtn" href="{{ site.url }}/posts">
+                         <a class="btn zoombtn" href="{{ site.url }}/posts">
                          Posts
-                         </a> -->
-                         <!-- <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         </a>
+                         <a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
-                         </a> -->
-                 </h3>
+                         </a>
+                 </h3> -->
             </div>
         </div>
     </header>
